--- a/sass/header/vtex.store-components.scss
+++ b/sass/header/vtex.store-components.scss
@@ -1,12 +1,14 @@
 .autoCompleteOuterContainer--desktop-searchbar {
+  border: 1px solid black;
+  border-radius: 0 5px 5px 0;
+  border-left: 0;
   :global(.vtex-input-prefix__group) {
     border: none;
-    flex-direction: row-reverse;
 
     @media screen and (max-width: 768px) {
       border: 2px solid #ccc;
       border-radius: 8px;
-      padding: 8px 30px 8px 0px;
+      padding: 8px 30px 8px 0;
     }
 
     :global(.vtex-styleguide-9-x-input) {
