--- a/sass/header/vtex.store-drawer.scss
+++ b/sass/header/vtex.store-drawer.scss
@@ -2,6 +2,12 @@
   .menuIcon {
     width: 16px;
     overflow: visible;
+
+    &::after {
+      content: "|";
+      font-size: 20px;
+      height: 30px;
+    }  
   }
 }
 
