--- a/sass/product/vtex.disclosure-layout.scss
+++ b/sass/product/vtex.disclosure-layout.scss
@@ -2,6 +2,6 @@
 @import '../_variables.scss';
 
 .trigger--containerShippingMenu {
-  background-color: var(--white);
+  background-color: $white;
   border: none;
 }
