--- a/sass/product/vtex.product-identifier.scss
+++ b/sass/product/vtex.product-identifier.scss
@@ -4,7 +4,7 @@
 .product-identifier--productReference {
   font-size: 14px;
   display: block;
-  color: var(--darkgrey-medium);
+  color: $darkgrey-medium;
   line-height: 1rem;
   margin-bottom: 0.5rem;
 
