--- a/sass/product/vtex.product-price.scss
+++ b/sass/product/vtex.product-price.scss
@@ -13,14 +13,14 @@
   left: 233px;
   .savingsPercentage {
     color: #E30613;
-    font-size: var(--cta-medium);
+    font-size: $cta-medium;
     font-weight: 600;
     line-height: 1rem;
   }
   &::before {
     content: '-';
     display: inline-block;
-    font-size: var(--cta-medium);
+    font-size: $cta-medium;
     color: #E30613;
     font-weight: 600;
     line-height: 1rem;
@@ -41,36 +41,36 @@
 }
 
 .sellingPriceValue--pdp {
-  color: var(--secondary-dark-text);
-  font-size: var(--headline-h1);
+  color: $secondary-dark;
+  font-size: $headline-h1;
   font-weight: 400;
   padding-top: 10px;
 }
 
 .listPrice--pdp {
-  font-size: var(--paragraph-medium-regular);
-  color: var(--darkgrey-light);
+  font-size: $paragraph-medium-regular;
+  color: $darkgrey-light;
   line-height: 20px;
   font-weight: 500;
   margin-right: 8px;
 }
 
 .savings--pdp {
-  font-size: var(--cta-small);
-  color: var(--system-alert-default);
+  font-size: $cta-small;
+  color: $system-alert-default;
   font-weight: 700;
-  background: var(--system-alert-light);
+  background: $system-alert-light;
   padding: 4px;
   border-radius: 4px;
 }
 .sellerNameContainer {
-  font-size: var(--paragraph-small-medium);
+  font-size: $paragraph-small-medium;
   font-weight: 500;
   line-height: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--darkgrey-medium);
+  color: $darkgrey-medium;
 
   @include mobile() {
     line-height: 2rem;
@@ -86,6 +86,6 @@
   line-height: 18px;
   margin: 1rem 0;
   .sellerName {
-    color: var(--ily-pink);
+    color: $primary-pink;
   }
 }
