--- a/sass/atomic/atoms/_autocomplete.scss
+++ b/sass/atomic/atoms/_autocomplete.scss
@@ -10,7 +10,7 @@
       padding: 0 1rem 1rem;
 
       @include desktop() {
-        border-bottom: 2px solid var(--primary-dark);
+        border-bottom: 2px solid $primary-dark;
       }
     
       @include mobile() {
@@ -77,7 +77,7 @@
           }
 
           &:hover {
-            background-color: var(--primary-light);
+            background-color: $primary-light;
           }
         }
 
