--- a/sass/footer/vtex.store-newsletter.scss
+++ b/sass/footer/vtex.store-newsletter.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 .newsletterForm {
   &--footer-newsletter {
     :global(.vtex-input-prefix__group) {
@@ -25,7 +27,7 @@
       transition: background-color 0.5s ease,color 0.5s ease;
       &:hover {
         color: #fff;
-        background-color: var(--secondary-default);
+        background-color: $secondary-default;
       }
       @media screen and (max-width: 768px) {
         padding: 0;
