--- a/sass/product/vtex.store-components.scss
+++ b/sass/product/vtex.store-components.scss
@@ -14,7 +14,7 @@
 }
 
 .swiperCaret {
-  background-color: var(--lightgrey-lighter);
+  background-color: $lightgrey-lighter;
   border-radius: 1.1rem;
   padding: 10px;
   width: 20px;
@@ -62,7 +62,7 @@
 }
 
 .swiperBullet--active {
-  background-color: var(--secondary-default);
+  background-color: $secondary-default;
 }
 
 .flexRowContent--boxLine {
@@ -96,7 +96,7 @@
 }
 .productImagesThumbActive {
   .thumbImg {
-    border: 2px solid var(--secondary-dark);
+    border: 2px solid $secondary-dark;
   }
 }
 
@@ -155,7 +155,7 @@
     }
     .productDescriptionTitle {
       font-size: 30px;
-      color: var(--primary-dark);
+      color: $primary-dark;
       font-weight: 300;
       margin-bottom: 2rem;
       @include breakpoint('mobile') {
@@ -180,7 +180,7 @@
       content: 'Selecione o tamanho';
       font-size: 14px;
       font-weight: 500;
-      color: var(--primary-dark);
+      color: $primary-dark;
     }
   }
   .skuSelectorInternalBox {
@@ -191,7 +191,7 @@
     height: 40px;
     z-index: 0;
     .skuSelectorInternalBox {
-      border: 2px solid var(--secondary-dark);
+      border: 2px solid $secondary-dark;
       border-radius: 10px;
       .skuSelectorItemTextValue {
         font-size: 14px;
@@ -207,7 +207,7 @@
         border-radius: 12px;
         border: 1px solid #e30613 !important;
         .skuSelectorItemTextValue {
-          color: var(--white);
+          color: $white;
         }
       }
     }
@@ -215,7 +215,7 @@
       margin: 4px;
     }
     .valueWrapper--unavailable {
-      color: var(--lightgrey-medium);
+      color: $lightgrey-medium;
     }
   }
 }
@@ -230,8 +230,8 @@
       flex-direction: column;
     }
     :global(.vtex-styleguide-9-x-input) {
-      border: 1px solid var(--lightgrey-light);
-      background-color: var(--white);
+      border: 1px solid $lightgrey-light;
+      background-color: $white;
       height: 38px;
       outline: 0;
       box-shadow: none;
@@ -239,8 +239,8 @@
     .submit {
       :global(.vtex-button) {
         width: 100%;
-        background-color: var(--secondary-dark);
-        color: var(--white);
+        background-color: $secondary-dark;
+        color: $white;
         border-radius: 8px;
         padding: 1rem 0;
         font-weight: 600;
