--- a/sass/quem-somos/vtex.flex-layout.scss
+++ b/sass/quem-somos/vtex.flex-layout.scss
@@ -24,10 +24,10 @@
         height: 5px;
       }
       &::-webkit-scrollbar-track {
-        background-color: var(--white);
+        background-color: $white;
       }
       &::-webkit-scrollbar-thumb {
-        background-color: var(--primary-light);
+        background-color: $primary-light;
       }
     }
   }
