--- a/sass/search/vtex.slider-layout.scss
+++ b/sass/search/vtex.slider-layout.scss
@@ -5,7 +5,7 @@
   .caretIcon--dotsCustom {
     padding: 0;
     margin: 0 46px 15px 10px;
-    color: var(--white);
+    color: $white;
     overflow: visible;
     width: 15px;
   }
