--- a/sass/home/vtex.flex-layout.scss
+++ b/sass/home/vtex.flex-layout.scss
@@ -14,26 +14,22 @@
     }
   }
 
-  &--home-section02 {
+  &--home-categories {
     @include container-main;
   }
 
-  &--home-section06 {
+  &--home-shelf-01 {
     @include container-main;
   }
 
-  &--home-section07-promotional-banner {
-    margin-top: 90px;
-  }
-
-  &--category-section02-showcase {
+  &--categories-showcase {
     :global(.vtex-store-components-3-x-container) {
       @include container-main;
     }
   }
 
-  &--home-section02-showcase,
-  &--category-section02-showcase {
+  &--home-categories-showcase,
+  &--categories-showcase {
     @media screen and (max-width: 768px) {
       max-width: 100%;
       overflow: scroll;
@@ -41,20 +37,20 @@
     }
   }
 
-  &--mobile-home-section02-showcase {
+  &--mobile-home-categories-showcase {
     padding-bottom: 0.5rem;
     overflow: scroll;
   }
 
-  &--mobile-home-section02 {
+  &--mobile-home-categories {
     border: 2px solid #f2f2f2;
     border-radius: 0.5rem;
   }
 
   .flexRowContent {
-    &--home-section02-showcase,
-    &--mobile-home-section02-showcase,
-    &--category-section02-showcase {
+    &--home-categories-showcase,
+    &--mobile-home-categories-showcase,
+    &--categories-showcase {
       padding: 0 1rem;
       justify-content: space-between;
       @media screen and (max-width: 768px) {
@@ -64,7 +60,7 @@
       }
     }
 
-    &--mobile-home-section02 {
+    &--mobile-home-categories {
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
@@ -77,24 +73,18 @@
 }
 
 .flexCol {
-  &--mobile-home-section02-showcase {
+  &--mobile-home-categories-showcase {
     margin-right: 0.5rem;
     position: relative;
   }
 
   .flexColChild {
-    &--home-section01-second-col {
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
+    &--home-categories-showcase,
+    &--categories-showcase {
+      width: 216px;
+      height: 266px;
+      padding: 44px;
+      position: relative;
     }
-  }
-
-  &--home-section02-showcase,
-  &--category-section02-showcase {
-    width: 216px;
-    height: 266px;
-    padding: 44px;
-    position: relative;
   }
 }
