--- a/sass/home/vtex.store-components.scss
+++ b/sass/home/vtex.store-components.scss
@@ -1,6 +1,6 @@
 .imageElement {
-  &--home-section02-image,
-  &--category-section02-image {
+  &--home-categories-image,
+  &--categories-image {
     border-radius: 16px;
     border: 2px solid transparent;
     margin-bottom: 10px;
@@ -24,11 +24,7 @@
     width: 100%;
   }
 
-  &--section07-promotional-banner {
-    width: 100%;
-  }
-
-  &--mobile-home-section02-image {
+  &--mobile-home-categories-image {
     height: 48px;
     margin: auto 1rem;
   }
