Feat: Criado estrutura básica do header e estilizando o header

--- a/sass/header/vtex.flex-layout.scss
+++ b/sass/header/vtex.flex-layout.scss
@@ -1,3 +1,6 @@
+
+@import '../_variables.scss';
+
 .flexRow {
   &--header-desktop-upper {
     margin: 0 auto;
@@ -46,48 +49,14 @@
     .flexCol--header-containerIcons {
       display: flex;
       flex-direction: row;
+      align-items: center;
     }
   }
 
   &--header-mobile {
     .flexRowContent {
-      &--header-mobile-first-row {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        .stretchChildrenWidth {
-
-          &:first-child {
-            width: auto !important;
-            margin-right: 16px;
-          }
-
-          &:last-child {
-            max-width: max-content;
-          }
-
-          .flexCol--header-logo {
-            min-width: 100px;
-          }
-        }
-      }
-
-      &--header-mobile-second-row {
-        flex-wrap: nowrap;
-        display: flex;
-        width: max-content;
-        overflow-x: scroll;
-        padding: 8px 12px 8px 16px;
-        background-color: #f2f2f2;
-        justify-content: space-between;
-      }
+      background-color: $white;
     }
-  }
-
-  &--header-mobile-second-row {
-    max-width: 100%;
-    overflow: scroll;
   }
 }
 
@@ -105,11 +74,6 @@
   &--header-logo {
     align-items: center;
     justify-content: center;
-
-    @media screen and (max-width: 768px) {
-      display: flex;
-      align-items: flex-start;
-    }
   }
 }
 
@@ -160,12 +124,33 @@
 }
 
 .flexColChild {
-  .flexRow--header-mobile-second-row {
-    background: #f2f2f2;
+  .flexCol--header-mobile-searchBar {
+    :global(.vtex-input-prefix__group) {
+      border: 1.5px solid $blue-dark;
+      border-radius: 4px;
+    }
   }
 }
 
 .flexCol--header-containerSearchBar {
   flex-direction: row;
   align-items: center;
+  .flexColChild--header-containerSearchBar {
+    height: max-content !important;
+    :global(.vtex-store-drawer-0-x-openIconContainer--drawer-desktop) {
+      display: flex;
+      align-items: center;
+      padding: 0.05rem 0 0.05rem 0.5rem;
+      border: 1.5px solid $blue-dark;
+      border-radius: 4px 0 0 4px;
+      border-right: 0;
+      &::after {
+        content: "|";
+        font-size: 2rem;
+        font-weight: 200;
+        color: $blue-dark;
+        margin-left: 5px;
+      }
+    }
+  }
 }
