--- a/sass/header/vtex.sticky-layout.scss
+++ b/sass/header/vtex.sticky-layout.scss
@@ -4,5 +4,6 @@
 
 .container--sticky-header,
 .container {
-    background-color: var(--white);
+	background-color: $white;
+	padding: 10px 20px 0;
 }
