Feat: Criando mais variaveis de cores para o css

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -55,3 +55,7 @@ $price-from: 0.75rem;
 $price-to: 1.12rem;
 $card-hover: 16px 0 8px rgba(0, 0, 0, 0.08);
 $card-default: 4px 0 2px rgba(0, 0, 0, 0.04);
+
+$primary-gold: #E3C963;
+$primary-text-dark: #1D1E2C;
+$background-blue-black: #232946;
